# go-resource-gen

./: README.md  justfile  main.py  pyproject.toml
