[project]
name = "go-resource-gen"
version = "0.1.0"
description = "Generate Spack resource() directives for Go module dependencies"
readme = "README.md"
authors = [
    { name = "Matthew Mehrtens", email = "12023414+mcmehrtens@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "vermin>=1.8.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"resources.py" = ["UP"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]